# SSO_demo

./: .gitignore  README.md  README_SSO_intro.md  README_SSO_monitoring.md  README_SSO_secure_solution.md  README_SSO_testing.md  client1_app.py  client2_app.py  client_client1_pub.pem  client_client2_pub.pem  idp_app.py  idp_public_key.pem  prometheus_metrics_example.txt  pyproject.toml  run.sh  run_integration_tests.sh  run_monitoring_tests.sh  run_unit_tests.sh
templates/: client_home.html  client_profile.html  idp_home.html  idp_login.html
tests/: __init__.py
tests/integration/: __init__.py  test_integration_monitoring.py  test_integration_sso.py  test_monitoring.py
tests/unit/: __init__.py  test_logging.py  test_unit_security.py
