[project]
name = "sso-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "prometheus-client>=0.20.0",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
